[build-system]
requires = [
    "scikit-build-core>=0.11",
    "pybind11>=2.13",
    "numpy>=2.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "simcoon"
dynamic = ["version"]
description = "Simulation in Mechanics and Materials: Interactive Tools - A library for the simulation of multiphysics systems and heterogeneous materials"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    { name = "Yves Chemisky", email = "yves.chemisky@gmail.com" },
]
maintainers = [
    { name = "Yves Chemisky", email = "yves.chemisky@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = [
    "simulation",
    "mechanics",
    "materials",
    "composites",
    "homogenization",
    "constitutive-models",
    "finite-element",
    "micromechanics",
]

[project.urls]
Homepage = "https://github.com/3MAH/simcoon"
Documentation = "https://3mah.github.io/simcoon-docs/"
Repository = "https://github.com/3MAH/simcoon.git"
Issues = "https://github.com/3MAH/simcoon/issues"
Changelog = "https://github.com/3MAH/simcoon/releases"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
ashby = [
    "mp-api>=0.39",
    "scipy>=1.7",
    "matplotlib>=3.5",
]

# =============================================================================
# scikit-build-core configuration
# =============================================================================

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
logging.level = "INFO"

# Editable install settings for development
editable.mode = "redirect"
editable.rebuild = true
editable.verbose = true

# Metadata: extract version from __version__.py
metadata.version.provider = "scikit_build_core.metadata.regex"
metadata.version.input = "python-setup/simcoon/__version__.py"

# CMake configuration
cmake.version = ">=3.15"
cmake.build-type = "Release"

# Wheel configuration - include Python files from python-setup/simcoon
wheel.packages = ["python-setup/simcoon"]
wheel.install-dir = "simcoon"

# Only install targets with COMPONENT python (skip dylib, headers, cmake files)
install.components = ["python"]

[tool.scikit-build.cmake.define]
SIMCOON_BUILD_TESTS = "OFF"

# =============================================================================
# pytest configuration
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["simcoon-python-builder/test"]
python_files = ["test_*.py", "*_test.py", "run_test.py"]
addopts = "-v --tb=short"

# =============================================================================
# uv configuration
# =============================================================================

[tool.uv]
# Disable build isolation for editable installs (enables direct cmake rebuilds)
# Requires build dependencies to be installed first: scikit-build-core, pybind11, numpy
no-build-isolation-package = ["simcoon"]

# =============================================================================
# cibuildwheel configuration
# =============================================================================

[tool.cibuildwheel]
# Build for CPython 3.10-3.14
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"

# Skip unsupported configurations
skip = [
    "*-musllinux*",      # musl libc: complex C++ deps don't support musl
    "pp*",               # PyPy: pybind11/numpy compatibility issues
    "*-win32",           # 32-bit Windows: not supported
    "*_i686",            # 32-bit Linux: not supported
    "*-macosx_x86_64",   # macOS Intel: not supported
]

# Build verbosity
build-verbosity = 1

# Test configuration
test-requires = ["pytest>=7.0", "numpy>=2.0"]
test-command = "pytest {project}/simcoon-python-builder/test -v --tb=short"

# -----------------------------------------------------------------------------
# Linux configuration
# -----------------------------------------------------------------------------

[tool.cibuildwheel.linux]
# Use manylinux_2_28 for C++20 compiler support (GCC 12+) and newer tools
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

# Install dependencies before build
before-all = [
    "dnf install -y epel-release",
    "dnf install -y cmake ninja-build openblas-devel lapack-devel wget",
    # Build Armadillo from source (manylinux packages are too old)
    "wget -q https://sourceforge.net/projects/arma/files/armadillo-14.0.2.tar.xz",
    "tar -xf armadillo-14.0.2.tar.xz",
    "cd armadillo-14.0.2 && cmake -S . -B build -DCMAKE_INSTALL_PREFIX=/usr/local -DDETECT_HDF5=OFF -DBUILD_SHARED_LIBS=ON && cmake --build build && cmake --install build",
]

# Environment for finding installed dependencies
environment = { CMAKE_PREFIX_PATH = "/usr/local", LD_LIBRARY_PATH = "/usr/local/lib:/usr/local/lib64" }

# auditwheel bundles shared libraries
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

# -----------------------------------------------------------------------------
# macOS configuration (arm64 only)
# -----------------------------------------------------------------------------

[tool.cibuildwheel.macos]
# Install dependencies via Homebrew
before-all = "brew install armadillo openblas ninja"

# Build for arm64 only (native on Apple Silicon runners)
archs = ["arm64"]

# Deployment target (must match Homebrew library targets)
environment = { MACOSX_DEPLOYMENT_TARGET = "15.0" }

# delocate bundles shared libraries
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

# -----------------------------------------------------------------------------
# Windows configuration
# -----------------------------------------------------------------------------

[tool.cibuildwheel.windows]
# Install dependencies via vcpkg
before-all = "vcpkg install armadillo:x64-windows openblas:x64-windows"

# Point CMake to vcpkg (use forward slashes for TOML compatibility)
environment = { CMAKE_TOOLCHAIN_FILE = "C:/vcpkg/scripts/buildsystems/vcpkg.cmake" }

# Skip wheel repair - CMake installs all needed DLLs directly into the wheel
repair-wheel-command = ""
