[build-system]
requires = [
    "scikit-build-core>=0.11",
    "pybind11>=2.13",
    "numpy>=2.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "simcoon"
version = "1.11.0"
description = "Simulation in Mechanics and Materials: Interactive Tools - A library for the simulation of multiphysics systems and heterogeneous materials"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    { name = "Yves Chemisky", email = "yves.chemisky@gmail.com" },
]
maintainers = [
    { name = "Yves Chemisky", email = "yves.chemisky@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.10",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = [
    "simulation",
    "mechanics",
    "materials",
    "composites",
    "homogenization",
    "constitutive-models",
    "finite-element",
    "micromechanics",
]

[project.urls]
Homepage = "https://github.com/3MAH/simcoon"
Documentation = "https://3mah.github.io/simcoon-docs/"
Repository = "https://github.com/3MAH/simcoon.git"
Issues = "https://github.com/3MAH/simcoon/issues"
Changelog = "https://github.com/3MAH/simcoon/releases"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

# =============================================================================
# scikit-build-core configuration
# =============================================================================

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
logging.level = "INFO"

# Editable install settings for development
editable.mode = "redirect"
editable.rebuild = true
editable.verbose = true

# CMake configuration
cmake.version = ">=3.15"
cmake.build-type = "Release"

# Wheel configuration - include Python files from python-setup/simcoon
wheel.packages = ["python-setup/simcoon"]
wheel.install-dir = "simcoon"

# Only install targets with COMPONENT python (skip dylib, headers, cmake files)
install.components = ["python"]

[tool.scikit-build.cmake.define]
SIMCOON_BUILD_TESTS = "OFF"

# =============================================================================
# pytest configuration
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["simcoon-python-builder/test"]
python_files = ["test_*.py", "*_test.py", "run_test.py"]
addopts = "-v --tb=short"

# =============================================================================
# uv configuration
# =============================================================================

[tool.uv]
# Disable build isolation for editable installs (enables direct cmake rebuilds)
# Requires build dependencies to be installed first: scikit-build-core, pybind11, numpy
no-build-isolation-package = ["simcoon"]

# =============================================================================
# cibuildwheel configuration
# =============================================================================

[tool.cibuildwheel]
# Key versions and paths (edit here, inherited by all platforms)
environment = { ARMADILLO_VERSION = "15.2.2", LIBOMP_VERSION = "19.1.7", MACOSX_DEPLOYMENT_TARGET = "11.0", CMAKE_PREFIX_PATH = "/usr/local" }

# Build for CPython 3.10-3.14
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"

# Skip unsupported configurations
skip = [
    "*-musllinux*",      # musl libc: complex C++ deps don't support musl
    "pp*",               # PyPy: pybind11/numpy compatibility issues
    "*-win32",           # 32-bit Windows: not supported
    "*_i686",            # 32-bit Linux: not supported
    "*-macosx_x86_64",   # macOS Intel: not supported
]

# Build verbosity
build-verbosity = 1

# Test configuration
test-requires = ["pytest>=7.0", "numpy>=2.0"]
test-command = "pytest {project}/simcoon-python-builder/test -v --tb=short"

# -----------------------------------------------------------------------------
# Linux configuration
# -----------------------------------------------------------------------------

[tool.cibuildwheel.linux]
# Use manylinux_2_28 for C++20 compiler support (GCC 12+) and newer tools
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

# Install dependencies before build
before-all = [
    "dnf install -y epel-release",
    "dnf install -y cmake ninja-build openblas-devel lapack-devel",
    # Build Armadillo from source (manylinux packages are too old)
    "curl -sL -o armadillo-code-${ARMADILLO_VERSION}.tar.gz https://gitlab.com/conradsnicta/armadillo-code/-/archive/${ARMADILLO_VERSION}/armadillo-code-${ARMADILLO_VERSION}.tar.gz",
    "tar -xf armadillo-code-${ARMADILLO_VERSION}.tar.gz",
    "cd armadillo-code-${ARMADILLO_VERSION} && cmake -S . -B build -DCMAKE_INSTALL_PREFIX=/usr/local -DBUILD_SHARED_LIBS=ON && cmake --build build && cmake --install build",
]

# auditwheel bundles shared libraries
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

# Add Linux-specific runtime search path without replacing global environment.
[[tool.cibuildwheel.overrides]]
select = "*-manylinux*"
inherit.environment = "append"
environment = { LD_LIBRARY_PATH = "/usr/local/lib:/usr/local/lib64" }

# -----------------------------------------------------------------------------
# macOS configuration (arm64 only)
# -----------------------------------------------------------------------------

[tool.cibuildwheel.macos]
# Build libomp from source to control MACOSX_DEPLOYMENT_TARGET
# (Homebrew's libomp targets macOS 15+ which is too restrictive for older systems)
# Build Armadillo from source against Apple Accelerate (not Homebrew's OpenBLAS)
before-all = [
    "brew install ninja",
    "curl -sfL -o openmp-${LIBOMP_VERSION}.src.tar.xz https://github.com/llvm/llvm-project/releases/download/llvmorg-${LIBOMP_VERSION}/openmp-${LIBOMP_VERSION}.src.tar.xz",
    "curl -sfL -o cmake-${LIBOMP_VERSION}.src.tar.xz https://github.com/llvm/llvm-project/releases/download/llvmorg-${LIBOMP_VERSION}/cmake-${LIBOMP_VERSION}.src.tar.xz",
    "tar -xf openmp-${LIBOMP_VERSION}.src.tar.xz && tar -xf cmake-${LIBOMP_VERSION}.src.tar.xz",
    "cmake -S openmp-${LIBOMP_VERSION}.src -B openmp-build -G Ninja -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local -DCMAKE_OSX_DEPLOYMENT_TARGET=${MACOSX_DEPLOYMENT_TARGET} -DCMAKE_MODULE_PATH=$(pwd)/cmake-${LIBOMP_VERSION}.src/Modules",
    "ninja -C openmp-build && sudo ninja -C openmp-build install",
    "curl -sfL -o armadillo-code-${ARMADILLO_VERSION}.tar.gz https://gitlab.com/conradsnicta/armadillo-code/-/archive/${ARMADILLO_VERSION}/armadillo-code-${ARMADILLO_VERSION}.tar.gz",
    "tar -xf armadillo-code-${ARMADILLO_VERSION}.tar.gz",
    "cd armadillo-code-${ARMADILLO_VERSION} && cmake -S . -B build -DCMAKE_INSTALL_PREFIX=/usr/local -DBUILD_SHARED_LIBS=ON -DALLOW_OPENBLAS_MACOS=OFF && cmake --build build && sudo cmake --install build",
]

# Build for arm64 only (native on Apple Silicon runners)
archs = ["arm64"]

# delocate bundles shared libraries (exclude libomp to avoid conflicts with
# other OpenMP-using packages like fedoo/scipy at runtime).
# --no-sanitize-rpaths preserves /usr/local/lib and /opt/homebrew/opt/libomp/lib
# so users can provide libomp via brew or conda without bundling it.
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v --exclude libomp.dylib --no-sanitize-rpaths {wheel}"

# Add macOS-specific env without replacing global environment (ARMADILLO_VERSION, etc.)
[[tool.cibuildwheel.overrides]]
select = "*-macosx*"
inherit.environment = "append"
environment = { OpenMP_ROOT = "/usr/local" }

# -----------------------------------------------------------------------------
# Windows configuration
# -----------------------------------------------------------------------------

[tool.cibuildwheel.windows]
# Static vcpkg deps — OpenBLAS is absorbed into simcoon.dll, avoiding
# runtime conflicts with numpy/scipy's own bundled OpenBLAS.
before-all = "vcpkg install armadillo:x64-windows-static-md openblas:x64-windows-static-md"

# VCPKG_TARGET_TRIPLET must be a CMake variable (not just env) for the
# toolchain to resolve static libs.  BLA_STATIC tells FindBLAS to look
# for .lib static archives instead of import libraries.
environment = { CMAKE_ARGS = "-DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake -DVCPKG_TARGET_TRIPLET=x64-windows-static-md -DBLA_STATIC=ON" }

# No wheel repair — no external DLLs to bundle
repair-wheel-command = ""

# x64: static vcpkg deps to avoid openblas.dll conflicts with numpy
[[tool.cibuildwheel.overrides]]
select = "*-win_amd64"
inherit.environment = "append"
before-all = "vcpkg install armadillo:x64-windows-static-md openblas:x64-windows-static-md"
environment = { CMAKE_TOOLCHAIN_FILE = "C:/vcpkg/scripts/buildsystems/vcpkg.cmake", VCPKG_TARGET_TRIPLET = "x64-windows-static-md" }

# ARM64: static vcpkg deps
[[tool.cibuildwheel.overrides]]
select = "*-win_arm64"
inherit.environment = "append"
before-all = "vcpkg install armadillo:arm64-windows-static-md openblas:arm64-windows-static-md"
environment = { CMAKE_TOOLCHAIN_FILE = "C:/vcpkg/scripts/buildsystems/vcpkg.cmake", VCPKG_TARGET_TRIPLET = "arm64-windows-static-md" }
